Bug 1128820 - IonMonkey: MIPS: Fix checkStackAlignment break code conflict with call c++ tag. r=rankov